<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ MIT License
  ~ Copyright (c) 2017. Attiq ur Rehman
  ~ Permission is hereby granted, free of charge, to any person obtaining
  ~ a copy of this software and associated documentation files (the "Software"),
  ~ to deal in the Software without restriction, including without limitation the
  ~ rights to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
  ~ copies of the Software, and to permit persons to whom the Software is furnished
  ~ to do so, subject to the following conditions:
  ~
  ~ The above copyright notice and this permission notice shall be included in all
  ~ copies or substantial portions of the Software. THE SOFTWARE IS PROVIDED
  ~ "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLIED, INCLUDING
  ~ BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY, FITNESS FOR A
  ~ PARTICULAR PURPOSE AND NON INFRINGEMENT. IN NO EVENT SHALL THE AUTHORS
  ~ OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
  ~ LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE,
  ~ ARISING FROM,OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE
  ~ OR OTHER DEALINGS IN THE SOFTWARE.
  -->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:background="@android:color/white"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:layout_width="200dp"
            android:layout_height="150dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="@dimen/x20"
            android:layout_marginTop="@dimen/x20"
            android:scaleType="fitXY"
            android:src="@drawable/icon_app" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="vertical"
            android:paddingEnd="@dimen/x15"
            android:paddingStart="@dimen/x15">

            <com.zindagi.blood.donate.base.view.AnyEditText
                android:id="@+id/et_email"
                android:layout_width="match_parent"
                android:layout_height="@dimen/field_height"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/x5"
                android:background="@drawable/edittext_round"
                android:hint="@string/email_hint"
                android:inputType="text"
                android:padding="@dimen/x3"
                android:paddingLeft="@dimen/x10"
                android:paddingStart="@dimen/x10"
                android:textColor="@color/app_widget_color" />

            <com.zindagi.blood.donate.base.view.AnyEditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="@dimen/field_height"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/x9"
                android:background="@drawable/edittext_round"
                android:hint="@string/password_hint"
                android:inputType="textPassword"
                android:padding="@dimen/x3"
                android:paddingLeft="@dimen/x10"
                android:paddingStart="@dimen/x10"
                android:textColor="@color/app_widget_color" />
        </LinearLayout>


        <com.zindagi.blood.donate.base.view.AnyTextView
            android:id="@+id/tv_forget"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/x10"
            android:text="@string/forgot_password"
            android:textColor="@color/app_widget_color"
            app:typeface="@string/helvetica_bold" />

        <Button
            android:id="@+id/button_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/x15"
            android:layout_marginEnd="@dimen/x15"
            android:layout_marginLeft="@dimen/x15"
            android:layout_marginRight="@dimen/x15"
            android:layout_marginStart="@dimen/x15"
            android:layout_marginTop="@dimen/x10"
            android:layout_weight="0"
            android:background="@color/app_widget_color"
            android:paddingLeft="@dimen/x18"
            android:paddingRight="@dimen/x18"
            android:text="@string/login"
            android:textAllCaps="false"
            android:textColor="@color/white" />

    </LinearLayout>

    <com.zindagi.blood.donate.base.view.AnyTextView
        android:id="@+id/tv_sign_up"
        android:layout_width="wrap_content"
        android:paddingBottom="@dimen/x10"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/forgot_password"
        android:textColor="@color/app_widget_color"
        app:typeface="@string/helvetica_bold" />
</RelativeLayout>